syntax = "proto3";

package tinyclub;

service TinyclubGrpc {
    rpc CheckSign (CheckSignRequest) returns (CheckSignReply) {}
    rpc InitDiscordGuild (InitDiscordGuildRequest) returns (InitDiscordGuildReply) {}
    rpc AddDiscordRole (AddDiscordRoleRequest) returns (AddDiscordRoleReply) {}
    rpc RemoveDiscordRole (RemoveDiscordRoleRequest) returns (RemoveDiscordRoleReply) {}
    rpc UpdateChannelName (UpdateChannelNameRequest) returns (UpdateChannelNameReply) {}
    rpc GetInviteLink (GetInviteLinkRequest) returns (GetInviteLinkReply) {}
}

// EthSign
message CheckSignRequest {
    string sign = 1;
    string wallet_address = 2;
    string sign_params = 3;
}
  
message CheckSignReply {
    string message = 1;
}

message WebhookObject {
    uint64 id = 1;
    uint64 guild_id = 2;
    uint64 channel_id = 3;
    string name = 4;
    string token = 5;
}

message InitDiscordGuildRequest {
    uint64 guild_id = 1;
    string club_unique_name = 2;
}
message InitDiscordGuildReply {
    string status = 1;
    string message = 2;
    WebhookObject notify_webhook = 3; 
    WebhookObject admin_notify_webhook = 4; 
}

message AddDiscordRoleRequest {
    uint64 guild_id = 1;
    uint64 user_id = 2;
    string role_name = 3;
}
message AddDiscordRoleReply {
    string status = 1;
    string message = 2;
}

message RemoveDiscordRoleRequest {
    uint64 guild_id = 1;
    uint64 user_id = 2;
    string role_name = 3;
}
message RemoveDiscordRoleReply {
    string status = 1;
    string message = 2;
}

message UpdateChannelNameRequest {
    uint64 guild_id = 1;
    string data_string = 2;
}
message UpdateChannelNameReply {
    string status = 1;
    string message = 2;
}

message GetInviteLinkRequest {
    uint64 guild_id = 1;
}
message GetInviteLinkReply {
    string status = 1;
    string message = 2;
    string invite_link = 3;
}